--- a/test/test.html
+++ b/test/test.html
@@ -1,79 +1,20 @@
-﻿<html>
+<html>
 <head>
-    <title>Form Tester</title>
-    <link rel="stylesheet" type="text/css" href="bootstrap-1.2.0.css">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>Quick Form Test</title>
+<link type="text/css" rel="stylesheet" href="http://code.jquery.com/qunit/qunit-git.css"></link>
 </head>
 <body>
-<div id="myform">
-    <div>
-        <label>语言：</label>
-        <input type="text" name="name" class="xlarge">
-    </div>
-    <div>
-        <label>语言：</label>
-        <textarea name="desc"></textarea>
-    </div>
-    <div>
-        <label>语言：</label>
-        <input type="checkbox" name="language" value="Chinese">Chinese
-        <input type="checkbox" name="language" value="English">English
-    </div>
-    <div>
-        <label>性别：</label>
-        <input type="radio" name="gender" value="m">male
-        <input type="radio" name="gender" value="f">female
-    </div>
-    <div>
-        <label>学校：</label>
-        <select name="school">
-            <option value="">Please select</option>
-            <option value="HFUT">HFUT</option>
-            <option value="NOT">NOT</option>
-        </select>
-    </div>
-    <div>
-        <label>运动：</label>
-        <select name="sports" multiple>
-            <option value="">Please select</option>
-            <option value="Basketball">Basketball</option>
-            <option value="Football">Football</option>
-            <option value="PingPong">PingPong</ption>
-        </select>
-    </div>
-</div>
-<div class="actions">
-    <input name="fetch" type="button" value="获取数据" class="btn primary">
-</div>
+    <h1 id="qunit-header">Quick Form Test</h1>
+    <h2 id="qunit-banner"></h2>
+    <div id="qunit-testrunner-toolbar"></div>
+    <h2 id="qunit-userAgent"></h2>
+    <ol id="qunit-tests"></ol>
+    <div id="qunit-fixture">test markup, will be hidden</div>
 </body>
 
 <script src="http://code.jquery.com/jquery-1.6.4.min.js" type="text/javascript"></script>
+<script src="http://code.jquery.com/qunit/qunit-git.js" type="text/javascript"></script>
 <script src="../Form.js" type="text/javascript"></script>
-<script type="text/javascript">
-$(function(){
-
-    var user = { 
-        name: "sofosogo", 
-        desc:"SE", 
-        details:{
-            language: ["English", "Chinese"], 
-            gender: "m", 
-            school: "HFUT",
-            sports: ["Basketball", "PingPong"]
-        }
-    };
-    var form = Form.create( document.getElementById("myform") );
-    form.fill( user );
-    
-    $(document.body).find("input[name=fetch]").click(function(){
-        var data = form.fetch();
-        if( typeof console !== "undefined" && console.log ){
-            console.log( data );
-        }else if( typeof JSON !== "undefined" && JSON.stringify ){
-            alert( JSON.stringify(data) );
-        }else{
-            alert( data );
-        }
-    });
-});
-</script>
+<script src="FormTester.js" type="text/javascript"></script>
 </html>
