different doctype different representation

--- a/test/sample.html
+++ b/test/sample.html
@@ -1,14 +1,11 @@
-﻿<html>
+﻿<!DOCTYPE html>
+<html>
 <head>
     <title>Form Tester</title>
     <link rel="stylesheet" type="text/css" href="bootstrap.css">
     <style type="text/css">
         #user-info{
             margin-top: 20px;
-        }
-        
-        input[type=text]{
-            height: 27px;
         }
         
         input[type=radio], input[type=checkbox]{
